--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,6 +1,6 @@
 {
     "Hello!": "Hallo!",
-    
+
     "Verify Email Address": "Verifikasi Email",
 
     "Please click the button below to verify your email address.": "Klik tombol di bawah ini untuk verifikasi alamat email anda.",
@@ -8,6 +8,15 @@
     "If you did not create an account, no further action is required.": "Jika anda merasa tidak membuat akun ini, tidak pelu dilanjutkan.",
 
     "If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser: [:actionURL](:actionURL)":
-    "Jika anda mengalami masalah dengna tombol \":actionText\", salin dan tempel link berikut [:actionURL](:actionURL)"
+    "Jika anda mengalami masalah dengna tombol \":actionText\", salin dan tempel link berikut [:actionURL](:actionURL)",
 
+    "Reset Password Notification": "Notifikasi Pengaturan Ulang Kata Sandi",
+
+    "You are receiving this email because we received a password reset request for your account.": "Anda menerima email ini karena kami menerima permintaan pengaturan ulang kata sandi untuk akun Anda",
+
+    "Reset Password": "Atur Ulang Kata Sandi",
+
+    "This password reset link will expire in 60 minutes.": "Link pengaturan ulang kata sandi ini akan kadaluwarsa dalam waktu 60 menit.",
+
+    "If you did not request a password reset, no further action is required.": "Jika anda merasa tidak meminta pengaturan ulang kata sandi, tidak pelu dilanjutkan."
 }
